# nebrija-trabajo-prog-1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  menu-stencil.txt  roulette.txt
src/: Acierto.cpp  Acierto.h  Animacion.cpp  Animacion.h  CMakeLists.txt  Game.cpp  Game.h  IO.cpp  IO.h  Juego.h  Jugador.cpp  Jugador.h  JugadorState.cpp  JugadorState.h  Jugadores.cpp  Jugadores.h  MessageQueue.cpp  MessageQueue.h  RondasState.cpp  RondasState.h  Screen.h  StateMachine.h  TablaResultados.h  TerminalScreen.cpp  TerminalScreen.h  Update.h  Utility.cpp  Utility.h  main.cpp
src/state/: Impl.cpp  Impl.h  State.h
tests/: CMakeLists.txt  TestBasics.cpp  TestDummy.cpp  TestResultado.cpp
